force-app/main/default/objects/Bank_Detail__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Bank Details</relationshipLabel>
    <relationshipName>Bank_Details</relationshipName>
    <type>Lookup</type>
</CustomField>