force-app/main/default/objects/Bank_Detail__c/fields/IsRescanNachApplicable__c.field-meta.xml
<CustomField>
    <fullName>IsRescanNachApplicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRescanNachApplicable</label>
    <type>Checkbox</type>
</CustomField>