force-app/main/default/objects/Bank_Detail__c/fields/Physical_Nach_Scan_Status__c.field-meta.xml
<CustomField>
    <fullName>Physical_Nach_Scan_Status__c</fullName>
    <label>Physical Nach Scan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inititated</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>